# fastapi-gw

./: Makefile  README.md  pyproject.toml
fastapi_gw/: __init__.py
