[tool.poetry]
name = "fastapi-gw"
version = "0.1.0"
description = ""
authors = ["hitsmaxft <mfthits@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_gw"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
websockets = "^11.0.3"
apscheduler = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
